test/modules/standard/FileSystem/lydia/copyTree/src_not_dir.good
src_not_dir.chpl:3: error: Not a directory in copyTree(blah.txt, thatWasntADirectory)
